Feature: Refactor backend working directory
Refactored backend working directory to fit NestJS conventions

--- a/server/package.json
+++ b/server/package.json
@@ -55,17 +55,13 @@
       "json",
       "ts"
     ],
-    "rootDir": ".",
-    "testMatch": [
-      "**/test/**/*.spec.ts"
-    ],
+    "rootDir": "src",
+    "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
     "collectCoverageFrom": [
-      "src/**/*.(t|j)s",
-      "!src/main.ts",
-      "!src/modules/*"
+      "**/*.(t|j)s"
     ],
     "coverageDirectory": "./coverage",
     "testEnvironment": "node"
