Feature: Changed CI pipeline
Handled unbuildable scenarios on different environment

--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,11 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
+    "build:develop": "NODE_ENV=develop nest build",
+    "build:master": "NODE_ENV=master nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
+    "start:master": "NODE_ENV=master nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
