--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,10 +1,8 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "master" branch
+  # Triggers pipeline on every update
+  # Todo: Implement CD on develop and master when AWS is ready
   push:
     branches:
       - '**'
@@ -15,15 +13,14 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      # Set build variant to be master on master branch,
+      # develop on develop branch and null on other
       - name: Set build variant
         run: |
           BRANCH_NAME=${GITHUB_REF#refs/heads/}
@@ -34,12 +31,13 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up bun
-        uses: bunjs/setup-bun@v1
+        uses: oven-sh/setup-bun@v2
 
-      - name: Build server
+      - name: Build & test server
         working-directory: server
         run: |
           bun ci
+          bun run test:cov
           bun run build:${{ env.BUILD_BRANCH }}
 
       - name: Build client
