Bugfix: Fix build fail on default branches
Added develop and master build mode for client

--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "build:develop": "tsc -b && vite build --mode develop",
+    "build:master": "tsc -b && vite build --mode master",
     "lint": "eslint .",
     "preview": "vite preview"
   },
